[metadata]
name = autoboot
version = attr: autoboot.VERSION
author = yizzuide
author_email = fu837014586@163.com
description = IoC with auto config framework
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/yizzuide/autoboot
keywords = IoC, event, auto config
license = MIT
classifiers =
  Development Status :: 5 - Production/Stable
  Operating System :: OS Independent
  Intended Audience :: Developers
  Programming Language :: Python :: 3.8
  License :: OSI Approved :: MIT License

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt
tests_require = 
  pytest>=6.2.0
  pytest-cov>=2.10.0

# See MANIFEST.in
[options.package_data]
autoboot = 
  *.json


[options.entry_points]
console_scripts =
executable_name =

[options.packages.find]
exclude =
  examples*
  tools*
  docs*
  tests*

[easy_install]
index_url = https://mirrors.aliyun.com/pypi/simple/